// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip component with component have to match default tooltip snapshot 1`] = `
<Component>
  <Tooltip
    align={null}
    animate_position={false}
    arrow="center"
    class={null}
    className={null}
    component={
      <button>
        Button
      </button>
    }
    group="main"
    hide_delay={500}
    id="tooltip"
    onClick={null}
    on_click={null}
    position="top"
    show_delay={300}
  >
    <TooltipWithEvents
      align={null}
      animate_position={false}
      arrow="center"
      attributes={
        Object {
          "children": "Text",
          "className": "dnb-tooltip dnb-core-style",
          "id": "tooltip",
        }
      }
      class={null}
      className={null}
      component={
        <button>
          Button
        </button>
      }
      group="tooltip"
      hide_delay={500}
      id="tooltip"
      internal_id="tooltip"
      onClick={null}
      on_click={null}
      position="top"
      show_delay={300}
      target={
        <button>
          Button
        </button>
      }
    >
      <span
        className={null}
        key="target-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          aria-describedby="tooltip"
        >
          Button
        </button>
      </span>
      <TooltipPortal
        active={false}
        align={null}
        animate_position={false}
        arrow="center"
        attributes={
          Object {
            "children": "Text",
            "className": "dnb-tooltip dnb-core-style",
            "id": "tooltip",
          }
        }
        class={null}
        component={
          <button>
            Button
          </button>
        }
        group="tooltip"
        hide_delay={500}
        id="tooltip"
        internal_id="tooltip"
        key="tooltip"
        onClick={null}
        on_click={null}
        position="top"
        show_delay={300}
        target={
          <span
            aria-describedby="tooltip"
          >
            <button
              aria-describedby="tooltip"
            >
              Button
            </button>
          </span>
        }
      />
    </TooltipWithEvents>
  </Tooltip>
</Component>
`;

exports[`Tooltip component with target have to match default tooltip snapshot 1`] = `
<Component>
  <button
    id="button"
  >
    Button
  </button>
  <Tooltip
    align={null}
    animate_position={false}
    arrow="center"
    class={null}
    className={null}
    component={null}
    group="main"
    hide_delay={500}
    id="tooltip"
    onClick={null}
    on_click={null}
    position="top"
    show_delay={300}
    target="#button"
  >
    <TooltipPortal
      active={false}
      align={null}
      animate_position={false}
      arrow="center"
      attributes={
        Object {
          "children": "Text",
          "className": "dnb-tooltip dnb-core-style",
          "id": "tooltip",
        }
      }
      class={null}
      className={null}
      component={null}
      group="tooltip"
      hide_delay={500}
      id="tooltip"
      internal_id="tooltip"
      onClick={null}
      on_click={null}
      position="top"
      show_delay={300}
      target="#button"
    />
  </Tooltip>
</Component>
`;

exports[`Tooltip scss have to match default theme snapshot 1`] = `
"/*
* Tooltip theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
.dnb-tooltip {
  border-radius: 1rem;
  color: var(--color-white);
  background-color: var(--color-emerald-green);
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.16); }
  .dnb-tooltip__arrow::before {
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: var(--color-emerald-green); }
"
`;

exports[`Tooltip scss have to match snapshot 1`] = `
"/*
* DNB Tooltip
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-tooltip {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-tooltip *,
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Tooltip component
*
*/
.dnb-tooltip {
  position: absolute;
  z-index: 3100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  opacity: 0;
  visibility: hidden;
  transition: opacity 200ms ease-out; }
  .dnb-tooltip--animate_position {
    transition: all 300ms ease-in-out, opacity 200ms ease-out; }
  .dnb-tooltip--active {
    visibility: visible;
    /*
      because of the first \\"show\\" we also use animation
      also, use forwards becuase of the usage of visibility
    */
    animation: show-tooltip 200ms ease-out forwards; }
  .dnb-tooltip--hide {
    visibility: visible;
    animation: hide-tooltip 200ms ease-in-out forwards; }
  .dnb-tooltip__content {
    min-width: 2rem;
    min-height: 1.5rem;
    padding: 0; }
  .dnb-tooltip__arrow {
    position: absolute;
    pointer-events: none;
    margin: 0;
    width: 1rem;
    height: 0.5rem;
    overflow: hidden; }
    .dnb-tooltip__arrow::before {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 1rem;
      height: 1rem;
      transform: translateY(70%) rotate(45deg); }
    .dnb-tooltip__arrow__position--bottom {
      top: -0.5rem; }
    .dnb-tooltip__arrow__position--top {
      bottom: -0.5rem;
      transform: rotate(180deg); }
    .dnb-tooltip__arrow__position--left {
      right: -0.75rem;
      margin-right: 2px;
      transform: rotate(90deg); }
    .dnb-tooltip__arrow__position--right {
      left: -0.75rem;
      margin-left: 2px;
      transform: rotate(270deg); }
    .dnb-tooltip__arrow__arrow--left {
      align-self: flex-start; }
    .dnb-tooltip__arrow__arrow--right {
      align-self: flex-end; }

@keyframes show-tooltip {
  from {
    opacity: 0; }
  to {
    opacity: 1; } }

@keyframes hide-tooltip {
  from {
    opacity: 1; }
  to {
    opacity: 0;
    visibility: hidden; } }
"
`;
